kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: purestanley-webapp-ingress
  namespace: purestanley-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: purestanley-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: purestanley-webapp-service
            port:
              number: 80
